[gd_scene load_steps=22 format=3 uid="uid://duet3b06f0anb"]

[ext_resource type="Script" path="res://main.gd" id="1_5mmh6"]
[ext_resource type="PackedScene" uid="uid://dxte0wedjow26" path="res://Player.tscn" id="1_hn5se"]
[ext_resource type="Texture2D" uid="uid://bn0yrwlst8m6p" path="res://Grass 12  .png" id="2_gbih0"]
[ext_resource type="PackedScene" uid="uid://do82ardwuqv8r" path="res://Treasure.tscn" id="3_yhhwp"]
[ext_resource type="PackedScene" uid="uid://ddjyorqgng1yv" path="res://addons/quaternius simple nature pack/gltf/tree_4.glb" id="5_iewcm"]
[ext_resource type="PackedScene" uid="uid://b5ey275tjp42n" path="res://addons/quaternius simple nature pack/gltf/rock_3.glb" id="6_p54hu"]
[ext_resource type="PackedScene" uid="uid://rpuofb621io3" path="res://addons/quaternius simple nature pack/gltf/tree_3.glb" id="7_neh3g"]
[ext_resource type="PackedScene" uid="uid://cmclw4qytwk54" path="res://addons/quaternius simple nature pack/gltf/tree_1.glb" id="8_0j3wx"]
[ext_resource type="PackedScene" uid="uid://baxuhen6ux27l" path="res://addons/tiny_treats_pretty_park_set/Assets/gltf/bench.gltf" id="8_i4l1m"]
[ext_resource type="PackedScene" uid="uid://0icgkgcmdv1" path="res://addons/tiny_treats_pretty_park_set/Assets/gltf/fountain.gltf" id="9_yn8a8"]
[ext_resource type="PackedScene" uid="uid://db215l5yyfnxp" path="res://addons/quaternius simple nature pack/gltf/tree_2.glb" id="11_cnccd"]
[ext_resource type="PackedScene" uid="uid://dr3eyicr16h6a" path="res://addons/quaternius simple nature pack/gltf/bush_2.glb" id="12_8mfs7"]
[ext_resource type="PackedScene" uid="uid://cypcgei2ufkcg" path="res://addons/tiny_treats_pretty_park_set/Assets/gltf/cobble_stones.gltf" id="14_5rli2"]
[ext_resource type="PackedScene" uid="uid://dgjl1vq5md43q" path="res://addons/tiny_treats_pretty_park_set/Assets/gltf/trashcan.gltf" id="15_jv4at"]
[ext_resource type="PackedScene" uid="uid://cqu25ogw6sy8t" path="res://addons/tiny_treats_pretty_park_set/Assets/gltf/street_lantern.gltf" id="15_uk3n1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cy3br"]
ground_bottom_color = Color(0.127968, 0.393091, 0.271849, 1)
ground_horizon_color = Color(0.585579, 0.702246, 0.782423, 1)

[sub_resource type="Sky" id="Sky_5g17h"]
sky_material = SubResource("ProceduralSkyMaterial_cy3br")

[sub_resource type="Environment" id="Environment_xptbe"]
background_mode = 2
sky = SubResource("Sky_5g17h")
ambient_light_color = Color(0.91317, 0.39908, 0.164661, 1)
ambient_light_energy = 15.85
reflected_light_source = 2
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_0ne2l"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jhuf4"]
albedo_color = Color(0, 0.700449, 0.397226, 1)
albedo_texture = ExtResource("2_gbih0")

[sub_resource type="FontFile" id="FontFile_waxcj"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.723, -4, 7.046)
script = ExtResource("1_5mmh6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xptbe")

[node name="Grass" type="MeshInstance3D" parent="."]
transform = Transform3D(15.9866, 0, 0, 0, 4.67961, 0, 0, 0, 13.1854, 0, 0.056998, 0)
mesh = SubResource("PlaneMesh_0ne2l")
surface_material_override/0 = SubResource("StandardMaterial3D_jhuf4")

[node name="CharacterBody" parent="." instance=ExtResource("1_hn5se")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.40332, 0.56749, -9.57175)

[node name="Treasure" parent="." instance=ExtResource("3_yhhwp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2661, 0.114487, -7.4984)

[node name="Treasure2" parent="." instance=ExtResource("3_yhhwp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.29457, 0, -10.6032)

[node name="Treasure3" parent="." instance=ExtResource("3_yhhwp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.623247, 0, -2.36233)

[node name="Treasure4" parent="." instance=ExtResource("3_yhhwp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.3423, 0, 1.30401)

[node name="Treasure5" parent="." instance=ExtResource("3_yhhwp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.16274, -0.0371705, 11.9866)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 22.0
offset_top = 18.0
offset_right = 83.0
offset_bottom = 41.0
scale = Vector2(1.52, 1.6)
text = "Score: 0
"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Time: 60s"
horizontal_alignment = 1

[node name="tree_4" parent="." instance=ExtResource("5_iewcm")]
transform = Transform3D(0.572271, 0, 0, 0, 0.572271, 0, 0, 0, 0.572271, 7.13239, 0.191238, -9.13165)

[node name="tree_4" parent="tree_4" instance=ExtResource("5_iewcm")]
transform = Transform3D(0.661674, 0, 0, 0, 0.572271, 0, 0, 0, 0.572271, -23.1759, -0.347632, 29.9668)

[node name="rock_3" parent="tree_4" instance=ExtResource("6_p54hu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.245598, 11.6234)

[node name="tree_3" parent="tree_4/rock_3" instance=ExtResource("7_neh3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.7603, -0.211256, 7.30059)

[node name="tree_5" parent="tree_4" instance=ExtResource("5_iewcm")]
transform = Transform3D(0.73806, 0, 0, 0, 0.730159, -5.77777e-05, 0, 6.37246e-05, 0.662042, -18.3967, 0.155567, 9.71733)

[node name="tree_4" parent="tree_4/tree_5" instance=ExtResource("5_iewcm")]
transform = Transform3D(0.572271, 0, 0, 0, 0.572271, 0, 0, 0, 0.572271, -21.561, -0.0686512, 27.8191)

[node name="rock_3" parent="tree_4/tree_5" instance=ExtResource("6_p54hu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.245598, 11.6234)

[node name="tree_3" parent="tree_4/tree_5/rock_3" instance=ExtResource("7_neh3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.67461, 1.04513, 12.9359)

[node name="tree_5" parent="." instance=ExtResource("5_iewcm")]
transform = Transform3D(1, 0, 0, 0, 0.783632, 0, 0, 0, 0.770051, -10.98, -0.0209808, -5.98758)

[node name="tree_3" parent="." instance=ExtResource("7_neh3g")]
transform = Transform3D(1.05997, 0, 0, 0, 1.05997, 0, 0, 0, 1.05997, -6.33246, -0.0733795, -11.0052)

[node name="tree_1" parent="." instance=ExtResource("8_0j3wx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.8341, 0.0848999, 10.2962)

[node name="fountain2" parent="." instance=ExtResource("9_yn8a8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.01636, -0.0109253, 3.96332)

[node name="bench2" parent="." instance=ExtResource("8_i4l1m")]
transform = Transform3D(0.874728, 0, 0, 0, 0.732899, 0, 0, 0, 1, 7.98376, 0.102005, 0.0787964)

[node name="bench3" parent="." instance=ExtResource("8_i4l1m")]
transform = Transform3D(-0.701265, 0, -0.158778, 0, 0.599441, 0, 0.112776, 0, -0.987314, 7.29924, 0.0685883, 6.93629)

[node name="tree_6" parent="." instance=ExtResource("7_neh3g")]
transform = Transform3D(0.634292, 0, 0, 0, 1, 0, 0, 0, 1, -12.4285, 0.112305, 8.07025)

[node name="tree_7" parent="." instance=ExtResource("7_neh3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.0372, 0.00250244, 6.25339)

[node name="tree_5" parent="tree_7" instance=ExtResource("5_iewcm")]
transform = Transform3D(1, 0, 0, 0, 0.647601, 0, 0, 0, 0.770051, -28.2349, -0.0209808, -5.98758)

[node name="tree_6" parent="tree_7/tree_5" instance=ExtResource("7_neh3g")]
transform = Transform3D(0.634292, 0, 0, 0, 1, 0, 0, 0, 1, -12.4285, 0.112305, 8.07025)

[node name="tree_2" parent="." instance=ExtResource("8_0j3wx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.225, 0.0456543, -2.31732)

[node name="tree_8" parent="." instance=ExtResource("5_iewcm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.61627, 0.0456696, 9.25427)

[node name="tree_9" parent="." instance=ExtResource("11_cnccd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.78735, 0, 0)

[node name="bush_2" parent="." instance=ExtResource("12_8mfs7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0448914, -11.7573)

[node name="tree_10" parent="." instance=ExtResource("5_iewcm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.77917, 0, -6.9259)

[node name="tree_11" parent="." instance=ExtResource("7_neh3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.42664, 0.0847778, 5.94241)

[node name="VictoryScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VictoryLabel" type="Label" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.161851, 0.595821, 0.271488, 1)
theme_override_colors/font_outline_color = Color(0.136834, 0.335823, 0.141323, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontFile_waxcj")
theme_override_font_sizes/font_size = 55
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="cobble_stones2" parent="." instance=ExtResource("14_5rli2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.7723, 0.156082, -5.55502)

[node name="street_lantern2" parent="." instance=ExtResource("15_uk3n1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5028, 0, 6.59399)

[node name="street_lantern3" parent="." instance=ExtResource("15_uk3n1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.43579, 0, -0.341522)

[node name="tree_12" parent="." instance=ExtResource("5_iewcm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.3928, 0, -11.0941)

[node name="trashcan2" parent="." instance=ExtResource("15_jv4at")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.0979, 0, -7.5882)

[node name="tree_13" parent="." instance=ExtResource("8_0j3wx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.37982, 0, -12.421)

[node name="tree_14" parent="." instance=ExtResource("11_cnccd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4033, 0, -10.8009)

[node name="tree_2" parent="tree_14" instance=ExtResource("11_cnccd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.20532, 0, 7.56604)

[node name="tree_15" parent="." instance=ExtResource("8_0j3wx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.628, 0, 12.1011)

[connection signal="body_entered" from="Treasure" to="CharacterBody" method="_on_treasure_body_entered"]
[connection signal="collected" from="Treasure" to="CharacterBody" method="_on_treasure_collected"]
[connection signal="collected" from="Treasure2" to="CharacterBody" method="_on_treasure_2_collected"]
[connection signal="collected" from="Treasure3" to="CharacterBody" method="_on_treasure_3_collected"]
[connection signal="collected" from="Treasure4" to="CharacterBody" method="_on_treasure_4_collected"]
[connection signal="collected" from="Treasure5" to="CharacterBody" method="_on_treasure_5_collected"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
